--- a/styles/screen_item.css
+++ b/styles/screen_item.css
@@ -91,7 +91,6 @@ body{
 }
 
 p{
-    z-index: -1;
     opacity: 75%;
     background-color: azure;
     margin: auto;
@@ -135,6 +134,7 @@ p{
 
 
 .menu {
+    z-index: 2;
     position: fixed;
     top: 0px;
     left: auto;
